@@ -29,6 +29,14 @@ any references to it, but can also be called explicitly.</p>
 <a href="http://curl.haxx.se/libcurl/c/curl_easy_perform.html"><code>curl_easy_perform</code></a> in libcurl.</p>
 </dd>
 
+<dt><code>reset()</code> -&gt; <em>None</em></dt>
+<dd>
+<p>Corresponds to
+<a
+href="http://curl.haxx.se/libcurl/c/curl_easy_reset.html"><code>curl_easy_reset</code></a> in libcurl.</p>
+</dd>
+
+
 <dt><code>setopt(</code><em>option, value</em><code>)</code> -&gt; <em>None</em></dt>
 <dd>
 
